# codex-sokoban-tui

./: .gitignore  README.md  main.py  pyproject.toml
docs/superpowers/plans/: 2026-03-27-codex-sokoban-tui.md
docs/superpowers/specs/: 2026-03-27-codex-sokoban-tui-design.md
src/codex_sokoban_tui/: __init__.py  app.py  focus.py  launcher.py  levels.py  snake.py  snake_terminal.py  sokoban.py  terminal_adapter.py  terminal_buffer.py  widgets.py  wt_command.py
tests/: test_app.py  test_launcher.py  test_snake.py  test_sokoban.py  test_terminal_buffer.py
