[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-sokoban-tui"
version = "0.1.0"
description = "Single-terminal Textual app with Codex on the left and Sokoban on the right"
requires-python = ">=3.12"
dependencies = [
  "textual>=2.1.2,<3",
  "pyte>=0.8.2,<1",
  "pywinpty>=2.0.15,<3; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
