[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-snake"
version = "0.1.0"
description = "Windows Terminal launcher for native Codex and Snake"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-snake = "codex_sokoban_tui.launcher:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
